# patina

./: .dockerignore  .env  .flutter-plugins  .flutter-plugins-dependencies  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  DEPS.md  Dockerfile  ExportOptions.plist  Jenkinsfile.android  Jenkinsfile.ios  README.md  env.template  justfile  pubspec.yaml
android/: local.properties
android/app/: build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/io/flutter/plugins/: GeneratedPluginRegistrant.java
android/app/src/main/kotlin/org/fieldkit/app/: MainActivity.kt
android/app/src/profile/: AndroidManifest.xml
calibration/: pubspec.yaml
calibration/.dart_tool/: package_config.json  package_config_subset
calibration/example/: calibration_example.dart
calibration/lib/: calibration.dart
calibration/lib/src/: calibration_base.dart
calibration/test/: calibration_test.dart
flows/: README.md  pubspec.yaml
flows/.dart_tool/: package_config.json  package_config_subset
flows/example/: sync.dart
flows/lib/: flows.dart
flows/lib/src/: model.dart  parsing.dart
ios/: Podfile
ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
ios/Runner/: GeneratedPluginRegistrant.m  Info.plist  bridge_generated.h
ios/Runner.xcodeproj/: project.pbxproj
ios/Runner/Assets.xcassets/AppIcon.appiconset/: Contents.json
lib/: app_state.dart  app_widget.dart  bridge_definitions.dart  bridge_definitions.freezed.dart  bridge_generated.dart  bridge_generated.io.dart  bridge_generated.web.dart  common_widgets.dart  connections.dart  constants.dart  diagnostics.dart  dispatcher.dart  fk-app.pb.dart  fk-app.pbenum.dart  fk-app.pbjson.dart  fk-app.pbserver.dart  flows_model.dart  flows_widgets.dart  fullscreen_map.dart  home_page.dart  loading_widget.dart  location_widgets.dart  main.dart  map_widget.dart  meta.dart  my_stations_page.dart  no_stations_widget.dart  preferences.dart  providers.dart  settings_page.dart  splash_screen.dart  station_details_page.dart  unknown_station_page.dart  welcome.dart
lib/calibration/: calibration_calculations.dart  calibration_model.dart  calibration_page.dart  calibration_review_page.dart  calibration_review_widget.dart  clear_calibration_page.dart  countdown.dart  number_form.dart  standard_form.dart  step_counter.dart
lib/deploy/: configure_schedule_page.dart  deploy_page.dart
lib/details/: station_details_page.dart
lib/l10n/: app_en.arb  app_es.arb
lib/reader/: model.dart  screens.dart  widgets.dart
lib/settings/: account_form_widget.dart  accounts_list_widget.dart  accounts_page.dart  edit_account_page.dart  help_page.dart  language_page.dart  legal_page.dart  settings_page.dart
lib/sync/: sync_page.dart
lib/view_station/: configure_lora.dart  configure_station.dart  configure_wifi_networks.dart  configure_wifi_upload.dart  firmware_page.dart  lora_network_form.dart  module_widgets.dart  no_modules.dart  sensor_widgets.dart  station_events.dart  station_modules_page.dart  view_station_page.dart  wifi_network_form.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugins.cmake
linux/flutter/ephemeral/.plugin_symlinks/: flutter_secure_storage_linux  path_provider_linux  shared_preferences_linux  url_launcher_linux
macos/: Podfile
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Flutter/ephemeral/: Flutter-Generated.xcconfig  flutter_export_environment.sh
macos/Runner/: AppDelegate.swift  DebugProfile.entitlements  Info.plist  Release.entitlements  bridge_generated.h
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Base.lproj/: MainMenu.xib
macos/Runner/Configs/: AppInfo.xcconfig
native/: Cargo.toml
native/native.xcodeproj/xcuserdata/jlewallen.xcuserdatad/xcschemes/: xcschememanagement.plist
native/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs  bridge_generated.web.rs  firmware.rs  lib.rs  nearby.rs
resources/: env.template
resources/flows/: flows.json  flows_en.json  flows_es.json
rust/: Cargo.toml
rust/src/: api.rs  firmware.rs  frb_generated.rs  lib.rs  nearby.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: rust_lib_fk.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_fk.podspec
rust_builder/windows/: CMakeLists.txt
test/: accounts_page_test.dart  calibration_model_test.dart  map_widget_test.dart  settings_test.dart  splash_screen_test.dart  unknown_station_page_test.dart  widget_test.dart
web/: index.html
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/flutter/ephemeral/.plugin_symlinks/: flutter_secure_storage_windows  geolocator_windows  path_provider_windows  shared_preferences_windows  url_launcher_windows
windows/runner/: Runner.rc
