[package]
name = "native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies.discovery]
path = "../rustfk/libs/discovery"

[dependencies.query]
path = "../rustfk/libs/query"

[dependencies.store]
path = "../rustfk/libs/store"

[dependencies.sync]
path = "../rustfk/libs/sync"

[dependencies]
anyhow = "1"
chrono = "0.4.24"
flutter_rust_bridge = "1.77.1"
glob = "0.3.1"
hex = "0.4.3"
itertools = "0.11.0"
serde_json = "1.0.97"
thiserror = "1.0.40"
tokio = { version = "1.28.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
