[package]
name = "rust_lib_fk"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies.discovery]
git = "https://gitlab.com/fieldkit/libraries/rustfk.git"
rev = "7338fc163d65bd062bf00ae7a6646008d1283dbc"

[dependencies.query]
git = "https://gitlab.com/fieldkit/libraries/rustfk.git"
rev = "7338fc163d65bd062bf00ae7a6646008d1283dbc"

[dependencies.sync]
git = "https://gitlab.com/fieldkit/libraries/rustfk.git"
rev = "7338fc163d65bd062bf00ae7a6646008d1283dbc"

[target.'cfg(not(any(target_os = "android")))'.dependencies]
store = { git = "https://gitlab.com/fieldkit/libraries/rustfk.git", rev = "7338fc163d65bd062bf00ae7a6646008d1283dbc" }

[target.'cfg(any(target_os = "android"))'.dependencies]
store = { git = "https://gitlab.com/fieldkit/libraries/rustfk.git", rev = "7338fc163d65bd062bf00ae7a6646008d1283dbc", features = [
    "bundled-sqlite",
] }

[dependencies]
anyhow = "1.0.81"
async-stream = "0.3.5"
base64 = "0.21.2"
chrono = "0.4.24"
flutter_rust_bridge = "=2.1.0"
glob = "0.3.1"
hex = "0.4.3"
itertools = "0.11.0"
serde_json = "1.0.97"
thiserror = "1.0.40"
tokio = { version = "1.28.0", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[dev-dependencies]
flutter_rust_bridge_macros = "=2.1.0"
